--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-	"name": "quest",
-	"scripts": {
-		"watch": "npx shadow-cljs watch app browser-test karma-test",
-		"release": "npx shadow-cljs release app",
-		"build-report": "npx shadow-cljs run shadow.cljs.build-report app target/build-report.html"
-	},
-	"dependencies": {
-		"react": "17.0.1",
-		"react-dom": "17.0.1"
-	},
-	"devDependencies": {
-		"shadow-cljs": "2.12.5"
-	}
+  "name": "quest",
+  "scripts": {
+    "watch": "npx shadow-cljs watch app browser-test karma-test",
+    "release": "npx shadow-cljs release app",
+    "build-report": "npx shadow-cljs run shadow.cljs.build-report app target/build-report.html"
+  },
+  "dependencies": {
+    "bulma": "^0.9.2",
+    "highlight.js": "10.7.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "shadow-cljs": "2.12.5"
+  }
 }
